fix(intra): prevent hiding body overflow  on non-subject pages

--- a/intra/styles.css
+++ b/intra/styles.css
@@ -5,7 +5,7 @@
   display: none !important;
 }
 
-body:has(:not(.markdown-wrap[hidden])) {
+body:has(.markdown-wrap:not([hidden])) {
   overflow: hidden;
 }
 
